# healthcare-community-response-engine

./: .env.example  .gitignore  README.md  database.py  pyproject.toml  requirements.txt  server.py  vercel.json
ingest/: classifier.py  mock.py  reddit_client.py  runner.py
responder/: generator.py  prompts.py  safety.py
templates/: dashboard.html  landing.html
tests/: test_classifier.py  test_generator.py  test_safety.py
