[project]
name = "community-capture"
version = "0.1.0"
description = "Community Capture AI Response Engine — intercept parenting anxiety moments on Reddit and route them into Summer Health consults."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.39.0",
    "posthog>=3.5.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
